--- a/package.json
+++ b/package.json
@@ -47,17 +47,17 @@
     "commitizen": "^4.2.4",
     "cpy-cli": "^3.1.1",
     "lerna": "^4.0.0",
-    "lint-staged": "^11.0.1",
+    "lint-staged": "^11.2.6",
     "markdown-toc": "^1.2.0",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.5.4",
+    "rxjs": "^7.5.5",
     "simple-git-hooks": "^2.7.0",
-    "tsc-watch": "^4.6.0",
+    "tsc-watch": "^4.6.2",
     "tsconfig-replace-paths": "^0.0.11",
-    "tsup": "^5.11.13",
+    "tsup": "^5.12.4",
     "typedoc": "^0.22.11",
     "typedoc-plugin-markdown": "^3.11.14",
-    "typescript": "^4.6.0-dev.20220203"
+    "typescript": "^4.6.3"
   },
   "config": {
     "commitizen": {
